[package]
name = "rab_mods"
version = "0.1.0"
authors = ["Rafael Bernabeu <rbbernabeu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
loops = { path = "./libs/loops" }

[workspace]
members = [
    "./libs/loops",
]
